@@ -106,6 +106,10 @@
 
 	<li>HTMLDOC now handles XHTML input more cleanly.</li>
 
+	<li>HTMLDOC no longer specifies an interpolation
+	preference for images in PostScript or PDF output (STR
+	#8)</li>
+
 	<H3 _HD_OMIT_TOC>Bug Fixes</H3>
 
 	<LI>Switching between landscape and portrait orientations
